<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.lojamanutencao.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtCliente"
        android:textSize="25dp"
        android:textColor="#9009"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintCliente"
        android:textColor="#4009"
        android:id="@+id/etCliente"
        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtDescricao"
            android:textSize="25dp"
            android:textColor="#9009"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintDescricao"
            android:textColor="#4009"
            android:id="@+id/etDescricao"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/txtValor"
            android:textSize="25dp"
            android:textColor="#9009"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintValor"
            android:id="@+id/etValor"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtTipo"
                android:textSize="25dp"
                android:textColor="#9009"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtOrcamento"
                    android:id="@+id/rbOrcamento"
                    />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtServico"
                    android:id="@+id/rbServico"
                    android:layout_marginHorizontal="60dp"/>

            </RadioGroup>

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/txtCategoria"
            android:textSize="25dp"
            android:textColor="#9009"
            android:layout_marginVertical="9dp"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spCategoria"
            android:entries="@array/arrayCategoria"
            >


        </Spinner>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtConcluido"
            android:textSize="25dp"
            android:textColor="#9009"
            android:id="@+id/cbConcluido"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnSalvar"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>
</ScrollView>
